Submitted by: Paul J. Reder Reviewed by: Jeff Trawick

Fixes required to get quoted and escaped command args working in
mod_ext_filter. There are also fixes in APR that were submitted
via a patch to apr_cpystrn.c PR 11793


git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@96472 13f79535-47bb-0310-9956-ffa450edef68